@@ -4,6 +4,15 @@
 //
 //===========================================================================
 
+R01-03-00-------------------------------------------------------------------
+9th January 2014 John Back
+     New tag version "1.3.0", incorporating all changes below.
+
+     Replaced auto-install script to work with this version as well as
+     the latest versions of all external generator packages.
+     Updated README to mention the new CERN-based web pages for Photos++ 
+     and Tauola++.
+
 8th January 2014 John Back
      Fix gcc 4.6 and 4.8 compilation warnings, courtesy of 
      Patrick Robbe (LHCb); main changes are removal of unused variables.
